# StayAwake

./: .env  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  TODO.md  build.rs
.github/: dependabot.yml
.github/actions-rs/: grcov.yml
.github/workflows/: Build.yml  Compile.yml  Publish.yml
src/: config.rs  main.rs  models.rs  offset_generator.rs
src/power/: mod.rs
src/power/platform/: default.rs  macos.rs  mod.rs  windows.rs
