[package]
authors = ["Krystian <krystian.inbox@gmail.com>"]
edition = "2018"
name = "stayawake"
version = "0.1.1"

[dependencies]
anyhow = "1.0"
dotenv = "0.15"
envy = "0.4"
mouse-rs = "0.4"
rand = "0.8.0"
serde = {version = "1.0", features = ["derive"]}
serde_with = "1.9.1"
tokio = {version = "1", features = ["rt", "time", "macros"]}
tracing = "0.1"
tracing-subscriber = "0.2"
wasmer_enumset = "1"

[target.'cfg(target_os = "windows")'.dependencies.winapi]
features = [
  "errhandlingapi",
  "impl-default",
  "handleapi",
  "minwinbase",
  "minwindef",
  "winbase",
  "winnt",
]
version = "0.3"

[profile.release]
codegen-units = 1
lto = true
