[package]
authors = ["krystianhub <krystian.inbox@gmail.com>"]
categories = ["command-line-utilities"]
description = "StayAwake is a simple program for Windows & MacOS to keep your system awake without affecting your workflow. Inspired by \"stay-awake\" package for Python."
edition = "2021"
exclude = [".github"]
keywords = ["desktop", "mouse", "awake", "windows", "macos"]
license = "MIT"
name = "stayawake"
readme = "README.md"
repository = "https://github.com/krystianhub/StayAwake"
version = "0.1.2"

[dependencies]
anyhow = "1.0"
dotenv = "0.15"
envy = "0.4"
mouse-rs = "0.4"
rand = "0.8"
serde = {version = "1.0", features = ["derive"]}
serde_with = "1"
tokio = {version = "1", features = ["rt", "time", "macros"]}
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}

[target.'cfg(target_os = "windows")'.dependencies]
wasmer_enumset = "1"
winapi = {version = "0.3", features = [
  "errhandlingapi",
  "impl-default",
  "handleapi",
  "minwinbase",
  "minwindef",
  "winbase",
  "winnt",
]}

[target.'cfg(target_os="macos")'.dependencies]
core-foundation = "0.9"
libc = "0.2"
mach = "0.3"

[profile.release]
codegen-units = 1
lto = true
strip = true
